--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   gtag('config', 'G-ZDKX9BF7QB');
 </script>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GM Detailing</title>
 </head>
