--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
 <header>
     <h1>GM Detailing</h1>
     <nav>
+        <a href="index.html"><img src="https://img.freepik.com/premium-vector/car-detailing-logo_387795-196.jpg" alt="GM Detailing Logo" class="logo" width="200" height="150"></a>
         <a href="index.html">Home</a> |
         <a href="features.html">Detailing Packages</a> |
         <a href="booking.html">Booking</a>
+        
     </nav>
 </header>
 
