--- a/features.html
+++ b/features.html
@@ -11,6 +11,7 @@
   gtag('config', 'G-ZDKX9BF7QB');
 </script>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GM Detailing</title>
 </head>
@@ -20,6 +21,7 @@
     <header>
         <h1>GM Detailing</h1>
         <nav>
+            <a href="index.html"><img src="https://img.freepik.com/premium-vector/car-detailing-logo_387795-196.jpg" alt="GM Detailing Logo" class="logo" width="200" height="150"></a>
             <a href="index.html">Home</a> |
             <a href="features.html">Detailing Packages</a> |
             <a href="booking.html">Booking</a>
