--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GM Detailing</title>
 </head>
@@ -51,4 +52,3 @@
 
 </body>
 </html>
-
